# euler-prover

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  build_colab.sh  build_viz.bat  colab_demo.py  colab_demo_complete.py
include/: complex_analysis.h  config.h  number_theory.h  progress.h  rng.h  topology.h  ultra_precision.h  visualization.h
src/: complex_analysis.cpp  main.cpp  number_theory.cpp  progress.cpp  rng.cpp  topology.cpp  ultra_precision.cpp  visualization.cpp
visualization/: CMakeLists.txt  euler_viz.cpp
visualization/examples/complex_analysis_demos/: complex_analysis_demo.cpp
visualization/examples/number_theory_demos/: number_theory_demo.cpp
visualization/examples/topology_demos/: topology_demo.cpp
visualization/shaders/: basic.frag  basic.vert  domain_coloring.frag  domain_coloring.vert
